--- a/src/style/_heropage.scss
+++ b/src/style/_heropage.scss
@@ -51,3 +51,61 @@
     }
 
 }
+
+
+.book-banner{
+    display: flex;
+    width: 100%;
+    height: 20rem;
+    background-image: url(../assets/banners/book-banner.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    margin-top: 7rem;
+
+    @media (max-width: 750px) {
+        height: fit-content;
+        padding-block: 1rem;
+    }
+
+    &::after{
+        content: '';
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        background-color: #2d2d2d;
+        opacity: .89;
+    }
+
+    &__text-container{
+        position: relative;
+        z-index: 9;
+        color: white;
+        height: 20rem;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 5rem;
+
+        @media (max-width: 750px) {
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            gap: 1rem;
+        }
+
+        h2{
+            font-size: 3.2rem;
+        }
+
+        span{
+            font-size: 2.7rem;
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            white-space: nowrap;
+        }
+
+    }
+}
