--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,4 +3,5 @@
 @import './global/boilerplate';
 @import 'navbar';
 @import 'hero';
-@import 'heropage'; // for heropage and book-banner
+@import 'heropage'; // for heropage, banner and book-banner
+@import 'footer';
