--- a/src/style/_navbar.scss
+++ b/src/style/_navbar.scss
@@ -1,3 +1,128 @@
 @import './global/color';
 @import './global/typography';
 
+.nav-section{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    width: 100%;
+    height: auto;
+    max-width: 133rem;
+    padding: 2.7rem 2rem;
+    margin-inline: auto;
+}
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    position: relative;
+
+    &__logo{
+        width: 14.5rem;
+        overflow: hidden;
+
+        img{
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    &__link{
+        display: flex;
+        gap: 2.1rem;
+
+        a{
+            font-size: $p-size;
+            color: $text-black;
+            font-weight: 500;
+            font-family: $text-font;
+            transition: color .3s;
+
+            &:hover{
+                color: $text-orange;
+            }
+        }
+
+        @media (max-width: 1000px) {
+            display: none;
+        }
+    }
+
+    &__button{
+
+        display: flex;
+        gap: 2.5rem;
+        font-size: $p-size;
+        font-family: $text-font;
+        font-weight: 500;
+        align-items: center;
+
+        &__sign-in{
+            color: $text-black;
+            transition: color .3s;
+
+            &:hover{
+                color: $text-orange;
+            }
+        }
+
+        &__register{
+            background-color: $text-orange;
+            color: white;
+            padding: 1.5rem 3rem;
+            border-radius: .3rem;
+            box-shadow: 0 10px 15px 0 rgb(255 83 48 / 35%);
+            transition: all .3s;
+
+            &:hover{
+                box-shadow: 0 10px 15px 0 rgb(255 83 48 / 50%);
+                background-color: #fa4226;
+            }
+
+        }
+
+
+
+        @media (max-width: 1000px) {
+            display: none;
+        }
+    
+    }
+    &__ham{
+        
+        
+        flex-direction: column;
+        gap: 3px;
+        cursor: pointer;
+        display: none;
+        z-index: 99999;
+
+        @media (max-width: 1000px) {
+            display: flex;
+        }
+
+        &:hover &__sticks{
+            background-color: $text-orange;
+            box-shadow: 0 10px 15px 0 rgb(255 83 48 / 35%);
+        }
+
+        &__sticks{       
+            height: 3px;
+            width: 40px;
+            background-color: $text-black;
+            border-radius: 2px;
+            transition: all .3s ease-in-out;
+        }
+        .close{
+            background-color: palevioletred;
+        }
+
+    }
+}
+
